# cosmos-reason2

./: Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
cosmos_reason2_utils/: pyproject.toml
cosmos_reason2_utils/cosmos_reason2_utils/: text.py  text_test.py
cosmos_reason2_utils/cosmos_reason2_utils/script/: inference.py
cosmos_reason2_utils/cosmos_reason2_utils/web/: app.py  routes.py
cosmos_reason2_utils/cosmos_reason2_utils/web/static/: app.js  index.html  style.css
docker/: entrypoint_web.sh
docs/: API_REFERENCE.md  GETTING_STARTED.md
