# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-reason2-utils"
version = "0.1.0"
description = "Cosmos-Reason2 utilities for inference and post-training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.12.0",
  "av>=16.0.1",
  "imageio-ffmpeg>=0.6.0",
  "matplotlib>=3.10.7",
  "numpy>=2.2.6,<2.3.0", # numba required <2.3
  "pillow>=12.0.0",
  "pydantic>=2.12.4",
  "pyyaml>=6.0.3",
  "qwen-vl-utils==0.0.14", # unstable api
  "rich>=14.2.0",
  "transformers>=4.57.0,<5.0.0",
  "tyro>=0.9.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "ruff==0.14.8",
]
web = [
    "flask>=3.1.0",
]
cosmos-rl = [
  "cosmos-rl==0.3.9", # unstable api
  "datasets>=4.4.1",
  "toml>=0.10.2",
  "wandb>=0.23.0",
]
trl = [
  "trl[peft]>=0.26.1",
  "bitsandbytes>=0.49.0",
  "tensorboard>=2.20.0",
  "math_verify>=0.8.0",
]
# vLLM 0.11: required by cosmos-rl/trl
cu128_torch28 = [
  "vllm==0.11.0",
  "torch==2.8.0", # version required by vLLM: https://github.com/vllm-project/vllm/releases
  "torchvision", # version pinned by torch
  "torchao==0.13.0", # version compatible with torch 2.8: https://github.com/pytorch/ao/issues/2919
  "torchcodec==0.7.0; platform_machine != 'aarch64'", # version compatible with torch 2.8: https://github.com/meta-pytorch/torchcodec/releases
  "flash-attn; platform_machine != 'aarch64'",
]
# vLLM 0.12
cu128_torch29 = [
  "vllm==0.12.0",
  "torch==2.9.0", # version required by vLLM: https://github.com/vllm-project/vllm/releases
  "torchvision", # version pinned by torch
  "torchao==0.14.1", # version compatible with torch 2.9: https://github.com/pytorch/ao/issues/2919
  "torchcodec==0.9.1; platform_machine != 'aarch64'", # version compatible with torch 2.9: https://github.com/meta-pytorch/torchcodec/releases
]
# vLLM 0.13
cu130_torch29 = [
  "vllm",
  "torch==2.9.0",
  "torchvision", # version pinned by torch
  "torchao==0.14.1", # version compatible with torch 2.9: https://github.com/pytorch/ao/issues/2919
  "torchcodec==0.9.1", # version compatible with torch 2.9: https://github.com/meta-pytorch/torchcodec/releases
]

[tool.uv]
conflicts = [
  [
    {extra = "cu128_torch28"},
    {extra = "cu128_torch29"},
    {extra = "cu130_torch29"},
  ],
]

[tool.uv.sources]
flash-attn = [
  { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" , extra = "cu128_torch28" },
]
torch = [
  { index = "pytorch-cu128", extra = "cu128_torch28" },
  { index = "pytorch-cu128", extra = "cu128_torch29" },
  { index = "pytorch-cu130", extra = "cu130_torch29" },
]
torchcodec = [
  { index = "cosmos-cu130", extra = "cu130_torch29", marker = "platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128_torch28" },
  { index = "pytorch-cu128", extra = "cu128_torch29" },
  { index = "pytorch-cu130", extra = "cu130_torch29" },
]
vllm = [
  { index = "vllm13-cu130", extra = "cu130_torch29" },
]

[[tool.uv.index]]
name = "cosmos-cu130"
url = "https://nvidia-cosmos.github.io/cosmos-dependencies/v1.4.0/cu130_torch29/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "vllm13-cu130"
url = "https://wheels.vllm.ai/72506c98349d6bcd32b4e33eec7b5513453c1502/cu130"
explicit = true

[project.scripts]
cosmos-reason2-inference = "cosmos_reason2_utils.script.inference:main"
cosmos-reason2-web = "cosmos_reason2_utils.web.app:main"

[tool.hatch.build.targets.sdist]
packages = [
  "cosmos_reason2_utils",
]

[tool.hatch.build.targets.wheel]
packages = [
  "cosmos_reason2_utils",
]
exclude = [
  "*_test.py",
]
